# benchmark_cpp

./: README.md
benchmarks/: CMakeLists.txt  benchmarks.cpp
visual_benchmarks/example_1_single_thread/: CMakeLists.txt  benchmark_example_2.cpp
visual_benchmarks/example_2_multi_threads/: CMakeLists.txt  instrumentor.h  visual_benchmark_multi_thread.cpp
